--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vite": "^6.0.3"
   },
   "dependencies": {
+    "bulma": "^1.0.2",
+    "d3": "^7.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
