--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bulma": "^1.0.2",
     "d3": "^7.9.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-select": "^5.9.0"
   }
 }
