--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "vite": "^6.0.3"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.2",
     "bulma": "^1.0.2",
     "d3": "^7.9.0",
     "react": "^19.0.0",
