新しいデータ！

--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,7 @@ __pycache__
 # json file
 buckup_data.json
 raw_data.json
-# processed_data.json
+processed_data.json
 
 .DS_Store
+create_json/output_data/processed_data.json
