--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "d3": "^7.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-select": "^5.9.0"
   }
 }
